# grouped-data-to-2d-histogram

./: .gitignore  LICENSE  README.md  dummy.xlsx  histogram2d.py  main.py  orchestrator.py  pyproject.toml  visualize.py
.github/workflows/: unit-tests.yml
data/: dummy.csv  dummy.xlsx
histogram2d/: builder.py  histogram2d.py  main.py  orchestrator.py  visualize.py
samples/: configAuto.py  configCount.py  configNormalized.py  dummy.csv  dummy.xlsx  generate_examples.py
src/: histogram2d.py  main.py  orchestrator.py  visualize.py
tests/: test_histogram2d.py  test_orchestrator.py
