[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pillar-project-2d-histogram"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
openpyxl = "^3.1.2"
pandas = "^2.2.2"
plotly = "^5.21.0"
nbformat = "^5.10.4"
kaleido = "0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^8.2.0"
