[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Sofia Assis"]

[tool.poetry.dependencies]
python = "^3.10"
openpyxl = "^3.1.2"
pandas = "^2.2.2"
plotly = "^5.21.0"
nbformat = "^5.10.4"
kaleido = "0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^8.2.0"
black = "^24.4.2" 

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''